# family-server

./: .gitignore  .pre-commit-config.yaml  README.md  plan.md
deploy/: README.md  deploy.sh  example.env.config  example.env.secret
server-db/: create_schema.sh  family_server_db_psql.sql  notes.md
server-rest/: .dockerignore  Dockerfile  README.md  compose.yaml  deploy.sh  pyproject.toml  requirements.txt  run_prod_server.sh  server_rest.service  start.sh
server-rest-api/: .dockerignore  .gitignore  Dockerfile  README.md  gunicorn.conf.py  pyproject.toml
server-rest-api/server_rest_api/: app.py  config.py  wsgi.py
server-rest-api/server_rest_api/generic/: __init__.py  generic.py
server-rest-api/server_rest_api/models/: __init__.py  responses.py
server-rest-api/server_rest_api/open_api_spec/: __init__.py  open_api_spec.py
server-rest-api/server_rest_api/static/: swagger.yaml
server-rest/alembic/: README  env.py
server-rest/alembic/versions/: 30a4052ce3f0_db_changes_for_weather_data.py  54aae96e39e9_adding_asset_tracker_table.py  90bf7cb32077_adding_unique_constraints_to_event_.py  bccaa3821686_adding_columns_annual_investment_return_.py  bf73c02e06b9_event_tracker_initial_schema.py  e451a8efec6d_create_weather_tables.py
server-rest/server_rest/: common.py  main.py
server-rest/server_rest/api/routes/: anniversery.py  asset_tracker.py  db_test.py  event_tracker.py  weather.py
server-rest/server_rest/core/: config.py  logging.py
server-rest/server_rest/db/: database.py
server-rest/server_rest/exceptions/: asset_tracker.py  event_tracker.py  weather.py
server-rest/server_rest/models/: asset_tracker.py  event_tracker.py  weather.py
server-rest/server_rest/mqtt/: handlers.py  subscriber.py
server-rest/server_rest/repository/: asset_tracker.py  db_test.py  event_tracker.py  weather.py
server-rest/server_rest/schemas/: asset_tracker.py  common.py  event_tracker.py  weather.py
server-rest/server_rest/services/: asset_tracker.py  db_test.py  event_tracker.py  weather.py
server-ui/: Dockerfile  README.md  angular.json  compose.yaml  deploy.sh  dummy.txt  nginx.conf  package-lock.json  package.json  server_ui.service
server_reverse_proxy/: README.md  compose.yaml  deploy.sh  nginx.conf  server_reverse_proxy.service
(+47 files in other folders)
