[tool.poetry]
name = "server-rest"
version = "0.1.3"
description = "Rest server for family"
authors = ["Arnab Mukherjee <am0072008@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.121.2"
gunicorn = "^23.0.0"
uvicorn = {extras = ["standard"], version = "^0.38.0"}
pydantic-settings = "^2.12.0"
sqlalchemy = "^2.0.45"
psycopg2-binary = "^2.9.11"
alembic = "^1.17.2"
paho-mqtt = "^2.1.0"


[tool.poetry.group.dev.dependencies]
black = "^26.3.1"
ruff = "^0.15.17"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff]
line-length = 120
target-version = "py312"
src = ["server_rest"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
]

ignore = [
    "B008",
]
